--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "i": "^0.3.7",
+    "npm": "^8.5.0",
     "pg": "^8.7.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
