--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon node ./bin/www",
+    "start": "node ./bin/www",
     "db:reset": "node db/scripts/resetdb.js"
   },
   "dependencies": {
