--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@mui/icons-material": "^5.4.1",
+    "@mui/lab": "^5.0.0-alpha.69",
     "@mui/material": "^5.4.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "@unicef/material-ui-currency-textfield": "^0.8.6",
     "axios": "^0.26.0",
+    "date-fns": "^2.11.1",
     "i": "^0.3.7",
     "nodemon": "^2.0.15",
     "npm": "^8.5.0",
